/*
 *  UCF COP3330 Fall 2021 Assignment 4 Solutions
 *  Copyright 2021 Praween Pongpat
 */

package baseline;

import java.util.List;
import java.util.Scanner;

public class Solution44 {
    public static final Scanner in = new Scanner(System.in);

    public static void main(String[] args) {
        //allocate Solution44 class

        //call a class JsonFileHandler to start the process on dealing with json file
        //the method should return a list of Product class

        //call method findProduct passing in the list of Product
        //the method should return the index where the searching product is located

        //display using overridden-toString the result since we have all info
    }


    private int findProduct(List<Product> list){
        //call method getNameFromUser to prompt and get name from user
        //search through the list if there's a match
        //if found, display Name, Price, and Quantity
        //if not found, display not found. ask for another input

        return 0;
    }

    private String getNameFormUser() {
        //display prompt to get name of product
        //read String from user
        //return that string
        return "";
    }

}
